playground/notas_tests/valid/new-01.hulk
type Base() {}
type Mid() inherits Base() {}
type Leaf() inherits Mid() {}
print(new Leaf());
