playground/notas_tests/invalid/r3-05.hulk
type T() { f(x, x) => x; }
